@@ -257,19 +257,19 @@ linkend="class-gtkadjustment"><classname>gtk.Adjustment</classname></link>
 object contains a value which has an associated lower and upper bound,
 together with step and page increments, and a page size. It is used in
 conjunction with several PyGTK widgets, including <link
-linkend="class-gtkadjustment"><classname>gtk.SpinButton</classname></link>,
+linkend="class-gtkspinbutton"><classname>gtk.SpinButton</classname></link>,
 <link
-linkend="class-gtkadjustment"><classname>gtk.Viewport</classname></link>,
+linkend="class-gtkviewport"><classname>gtk.Viewport</classname></link>,
 and <link
-linkend="class-gtkadjustment"><classname>gtk.Range</classname></link> (which
+linkend="class-gtkrange"><classname>gtk.Range</classname></link> (which
 is a base class for <link
-linkend="class-gtkadjustment"><classname>gtk.HScrollbar</classname></link>,
+linkend="class-gtkhscrollbar"><classname>gtk.HScrollbar</classname></link>,
 <link
-linkend="class-gtkadjustment"><classname>gtk.VScrollbar</classname></link>,
+linkend="class-gtkvscrollbar"><classname>gtk.VScrollbar</classname></link>,
 <link
-linkend="class-gtkadjustment"><classname>gtk.HScale</classname></link>, and
+linkend="class-gtkhscale"><classname>gtk.HScale</classname></link>, and
 <link
-linkend="class-gtkadjustment"><classname>gtk.VScale</classname></link>).</para>
+linkend="class-gtkvscale"><classname>gtk.VScale</classname></link>).</para>
 
     <para>A <link
 linkend="class-gtkadjustment"><classname>gtk.Adjustment</classname></link>
