@@ -1,3 +1,8 @@
+2004-10-12  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtkadjustment.xml (Description) Fix broken links reported by
+	Antoon Pardon.
+
 2004-10-05  John Finlay  <finlay@moeraki.com>
 
 	* pygtk2-ref.xml Bump version number and set pubdate
